<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.enrique.cpr.Emergencia">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        android:id="@+id/proteger"
        android:text="@string/proteg"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/card_background"
        android:elevation="4dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="8dp"
        android:textAllCaps="false"
        android:id="@+id/alert"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:text="@string/alertar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_medium"
        android:background="@drawable/card_background"
        android:textColor="@color/colorPrimary"
        android:elevation="4dp"
        android:id="@+id/soco"
        android:text="@string/soco"/>

</LinearLayout>