<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context="com.example.enrique.cpr.no_consciente.NoConsciente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="12"
            android:orientation="vertical">

            <Button
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="A"/>

            <Button
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="B" />

            <Button
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="C" />

            <Button
                android:id="@+id/parada"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/paradaC" />

            <Button
                android:id="@+id/atragar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/atragar"/>

            <Button
                android:id="@+id/covulsion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/convulsion" />

            <Button
                android:id="@+id/desmayo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/desmayo" />

            <Button
                android:id="@+id/coma"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/coma"/>

            <Button
                android:id="@+id/trauma"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/card_background"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/Roboto-Medium"
                android:textColor="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/trauma" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>